# srslib

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  conanfile.py  conanfile.txt  make.mk
apps/: CLIOptionsMap.hpp  CMakeLists.txt  control.cpp  main.cpp  make.mk  rules.mk  srs.cpp  srscli.c  srsread.c
apps/srscli/: main.c
apps/srsread/: main.c
include/: fec.h  udp_socket.h  util.h  vmm3_srs_hit.h
src/: fec.c  udpsocket.c  util.c
srs/: App.cpp  App.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CommandHandlers.cpp  CommandHandlers.hpp  CommonDefitions.hpp  Connection.cpp  Connection.hpp  Control.cpp  Control.hpp  DataProcessor.cpp  DataProcessor.hpp  DataStructs.cpp  DataStructs.hpp  fec.c  util.c  vmm3_common_data.h
srs/analysis/: DataProcessor.cpp  DataProcessor.hpp  DataStructs.cpp  DataStructs.hpp
srs/c_impl/: CMakeLists.txt  fec.c  fec.h  udpsocket.c  vmm3_srs_header.h
srs/control/: Controller.hpp
srs/devices/: Fec.hpp  VmmDevice.hpp
srs/utils/: AppStatus.hpp  CommonDefitions.hpp  ConnectionBase.hpp  ConnectionTypeDef.hpp  Connections.cpp  Connections.hpp  Serializer.hpp
tests/: rules.mk
